--- a/Website/css/styles.css
+++ b/Website/css/styles.css
@@ -26,7 +26,7 @@
   background: url(../images/name.png);
 }
 
-#proprietor-header {
+.proprietor-header {
   box-sizing: border-box;
 
   position: absolute;
