--- a/Website/css/styles.css
+++ b/Website/css/styles.css
@@ -16,8 +16,8 @@ body{
 
 .col-md{
   margin-top: 12%;
-  width: 50vw;
-  background-color: ;
+  width: ;
+  background-color: #4353FF;
 }
 
 #logo-image {
