--- a/Website/css/styles.css
+++ b/Website/css/styles.css
@@ -48,7 +48,7 @@ body{
 .proprietor-header {
 
   font-size: large;
-  
+  font-weight: bold;
   padding: 5px;
   padding-left: 8px;
   padding-right: 8px;
