--- a/Website/css/styles.css
+++ b/Website/css/styles.css
@@ -23,7 +23,7 @@ body{
   max-width: 35vw;
   align-items: center;
   text-align: center;
-  border-radius: ;
+  border-radius: 35px;
 }
 
 #logo-image {
