--- a/Website/css/styles.css
+++ b/Website/css/styles.css
@@ -54,7 +54,7 @@ body{
 
 .proprietor-header {
 
-  font-size: large;
+  font-size: medium;
   font-weight: bold;
   padding: 5px;
   padding-left: 8px;
