--- a/Website/css/styles.css
+++ b/Website/css/styles.css
@@ -58,7 +58,7 @@ body{
   font-weight: bold;
   padding: 5px;
   padding-left: 8px;
-  
+  border-radius: 20px;
   padding-right: 8px;
 
   border-radius: 25px;
