--- a/Website/css/styles.css
+++ b/Website/css/styles.css
@@ -19,6 +19,7 @@ body{
   font-weight: bold;
   border-radius: 15px;
   padding: 5px;
+  padding-top: 7px;
   margin: 5px;
   text-align: center;
 }
