--- a/Website/css/styles.css
+++ b/Website/css/styles.css
@@ -19,7 +19,7 @@ body{
   font-weight: bold;
   border-radius: 15px;
   padding: 5px;
-  padding-top: 7px;
+  margin-top: 10px;
   margin: 5px;
   text-align: center;
 }
