--- a/Website/css/styles.css
+++ b/Website/css/styles.css
@@ -12,7 +12,8 @@ body{
 
 .container{
   display: inline-flex;
-  align-items: ;
+  align-items: center;
+  text-align: center;
 }
 
 .form-control{
