--- a/Website/css/styles.css
+++ b/Website/css/styles.css
@@ -12,7 +12,7 @@ body{
 
 .container{
   display: flexbox;
-  flex-direction: column;
+  flex-direction: row;
   align-items: center;
   text-align: center;
 }
