--- a/Website/css/styles.css
+++ b/Website/css/styles.css
@@ -28,10 +28,10 @@ body{
 
 .col-md{
   margin-top: 12%;
-  width: 30vw;
   background-color: #4353FF;
   padding: 20px;
   min-height: 60vh;
+  min
   max-width: 35vw;
   align-items: center;
   text-align: center;
