--- a/Website/css/styles.css
+++ b/Website/css/styles.css
@@ -31,7 +31,7 @@ body{
   background-color: #4353FF;
   padding: 20px;
   min-height: 60vh;
-  min
+  min-width: ;
   max-width: 35vw;
   align-items: center;
   text-align: center;
