--- a/Website/css/styles.css
+++ b/Website/css/styles.css
@@ -7,12 +7,12 @@
 }
 
 @font-face {
-  font-family: 'GoodFont';
+  font-family: 'Prototype';
   src: url('Prototype.ttf');
 }
 
 h1{
-  font-family: GoodFont;
+  font-family: Prototype;
 }
 
 body{
