--- a/Website/css/styles.css
+++ b/Website/css/styles.css
@@ -20,8 +20,7 @@ h2{
   font-family: 'Prototype';
   font-size: 28px;
   color: white;
-  text-decoration: solid;
-  -webkit-text-stroke: #000000;
+  text-stroke: 4px navy;
 }
 
 body{
