--- a/Website/css/styles.css
+++ b/Website/css/styles.css
@@ -20,7 +20,7 @@ h2{
   font-family: 'Prototype';
   font-size: 28px;
   color: white;
-  text-stroke: 4px navy;
+  -webkit-text-stroke: 4px navy;
 }
 
 body{
