--- a/Website/css/styles.css
+++ b/Website/css/styles.css
@@ -19,9 +19,10 @@
   text-align: left;
   color: white;
   background-color: #202120;
-  padding: 20px;
+  padding: 10px;
   display: flex;
   flex-direction: column;
+  bor
 }
 
 .contractdetail{
